# ComfyUI-Distributed

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  __init__.py  distributed.py  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml
data/: flux_dev_checkpoint_example.json
docs/: host-port-input-improvements.md  worker-setup-guides.md  zustand-facade-pattern-plan.md
docs/planning/: feature-adoption-plan.md  feature-comparison-matrix.md  file-sync-feature-plan.md  host-port-input-improvements.md  missing-features-analysis.md  new-features.md  react-ui-modernization-plan.md  release-automation-plan.md
docs/planning/react-ui-modernization/: README.md  feature-comparison-matrix.md  missing-features-analysis.md
tests/: test_connection_parser.py  test_distributed.py  test_simple_distributed.json
ui/: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  README.md  index.html  jest.config.js  package-lock.json  package.json  vite.config.js  vite.config.ts
ui/public/locales/: index.ts
ui/src/: App.tsx  extension.tsx  main.tsx  setupTests.ts
ui/src/__mocks__/: WorkerManagementPanel.tsx  zustand-middleware.js  zustand.js
ui/src/components/: AddWorkerDialog.css  AddWorkerDialog.tsx  ComfyUIIntegration.tsx  ConnectionInput.css  ConnectionInput.tsx  (+7 more)
utils/: config.py  connection_parser.py  network.py
web/: apiClient.js  connectionInput.js  constants.js  executionUtils.js  image_batch_divider.js  main.js  sidebarRenderer.js  stateManager.js  ui.js  workerUtils.js
workflows/: flux_dev_checkpoint_example.json
(+16 files in other folders)
