[project]
name = "ComfyUI-Distributed"
description = "ComfyUI extension that enables multi-GPU processing locally, remotely and in the cloud"
version = "1.1.0"
license = {file = "LICENSE"}
dependencies  = []

[project.urls]
Repository = "https://github.com/pixeloven/ComfyUI-Distributed"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pixeloven"
DisplayName = "ComfyUI-Distributed"
Icon = "https://raw.githubusercontent.com/pixeloven/ComfyUI-Distributed/refs/heads/main/web/distributed-logo-icon.png"
includes = ["ui/dist/"]
